# dioxus-study

./: Cargo.toml
sh/: init.sh
src/: main.rs
