[package]
name = "dioxus-study"
version = "0.1.0"
authors = ["尤雨东 <root@ltpp.vip>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
